# CodeMind-Transform-Your-masive-code-into-bundles-and-graph

./: README.md
.github/workflows/: publish-pypi.yml
backend/: main.py
backend/app/api/routes/: chat.py  mcp.py
backend/app/core/agent/: agent_router.py  agentic_loop.py  responder.py  tools.py
backend/app/core/producer/: summarizer.py
backend/app/models/: chat.py
backend/app/utils/: llm_client.py
cli/: README.md  pyproject.toml  requirements.txt
cli/codemind_okf/: __init__.py  cli.py  mcp.py
cli/codemind_okf/core/: __init__.py  crawler.py  file_utils.py  index_builder.py  parser.py  summarizer.py  writer.py
cli/codemind_okf/templates/: agents_md.txt  copilot_instructions.txt  cursorrules.txt  github_action.yml
frontend/src/app/: page.tsx
frontend/src/components/dashboard/: BundleStatsModal.tsx  ChatInterface.tsx
